--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="FWT-Project/src/main.tsx"></script>
+    <script type="module" src="https://aleksey5000.github.io/FWT-Project/src/main.tsx"></script>
   </body>
 </html>
